refactor(gerenciar-produtos): :recycle: refatorando pastas e adicionando boas praticas do react #0002

--- a/frontend/src/i18n/locales/en-US.json
+++ b/frontend/src/i18n/locales/en-US.json
@@ -142,14 +142,53 @@
     "all_types": "All types",
     "all_categories": "All categories",
     "start_date": "Start date",
-    "end_date": "End date"
+    "end_date": "End date",
+    "optional": "optional",
+    "characters": "characters"
+  },
+  "validation": {
+    "name_required": "Product name is required",
+    "name_min_length": "Name must be at least 2 characters long",
+    "name_max_length": "Name cannot exceed 100 characters",
+    "description_max_length": "Description cannot exceed 500 characters",
+    "price_required": "Price is required",
+    "price_invalid_number": "Price must be a valid number",
+    "price_positive": "Price must be greater than zero",
+    "price_max_value": "Price cannot exceed $999,999.99",
+    "quantity_required": "Quantity is required",
+    "quantity_invalid": "Quantity must be a valid number",
+    "quantity_positive": "Quantity must be greater than zero",
+    "form_error": "Form error",
+    "server_error": "Server error",
+    "network_error": "Connection error. Check your internet",
+    "unauthorized_error": "Session expired. Please login again",
+    "validation_failed": "Some fields contain errors. Please check and try again",
+    "username_required": "Username is required",
+    "username_min_length": "Username must be at least 3 characters long",
+    "username_max_length": "Username cannot exceed 50 characters",
+    "password_required": "Password is required",
+    "password_min_length": "Password must be at least 6 characters long",
+    "password_max_length": "Password cannot exceed 100 characters",
+    "invalid_credentials": "Invalid username or password",
+    "invalid_request": "Invalid login data",
+    "login_error": "Login error"
   },
   "errors": {
     "generic": "An unexpected error occurred",
     "network": "Connection error",
     "unauthorized": "Unauthorized access",
+    "forbidden": "Access denied",
     "not_found": "Resource not found",
-    "server_error": "Internal server error"
+    "server_error": "Internal server error",
+    "operation_failed": "Operation failed",
+    "product_create_failed": "Failed to create product",
+    "product_update_failed": "Failed to update product",
+    "product_delete_failed": "Failed to delete product",
+    "product_fetch_failed": "Failed to load products",
+    "transaction_create_failed": "Failed to create transaction",
+    "transaction_update_failed": "Failed to update transaction",
+    "transaction_delete_failed": "Failed to delete transaction",
+    "transaction_fetch_failed": "Failed to load transactions"
   },
   "accessibility": {
     "skip_to_content": "Skip to main content",
