--- a/frontend/src/i18n/locales/pt-BR.json
+++ b/frontend/src/i18n/locales/pt-BR.json
@@ -142,14 +142,53 @@
     "all_types": "Todos os tipos",
     "all_categories": "Todas as categorias",
     "start_date": "Data inicial",
-    "end_date": "Data final"
+    "end_date": "Data final",
+    "optional": "opcional",
+    "characters": "caracteres"
+  },
+  "validation": {
+    "name_required": "O nome do produto é obrigatório",
+    "name_min_length": "O nome deve ter pelo menos 2 caracteres",
+    "name_max_length": "O nome não pode exceder 100 caracteres",
+    "description_max_length": "A descrição não pode exceder 500 caracteres",
+    "price_required": "O preço é obrigatório",
+    "price_invalid_number": "O preço deve ser um número válido",
+    "price_positive": "O preço deve ser maior que zero",
+    "price_max_value": "O preço não pode exceder R$ 999.999,99",
+    "quantity_required": "A quantidade é obrigatória",
+    "quantity_invalid": "A quantidade deve ser um número válido",
+    "quantity_positive": "A quantidade deve ser maior que zero",
+    "form_error": "Erro no formulário",
+    "server_error": "Erro do servidor",
+    "network_error": "Erro de conexão. Verifique sua internet",
+    "unauthorized_error": "Sessão expirada. Faça login novamente",
+    "validation_failed": "Alguns campos contêm erros. Verifique e tente novamente",
+    "username_required": "O nome de usuário é obrigatório",
+    "username_min_length": "O nome de usuário deve ter pelo menos 3 caracteres",
+    "username_max_length": "O nome de usuário não pode exceder 50 caracteres",
+    "password_required": "A senha é obrigatória",
+    "password_min_length": "A senha deve ter pelo menos 6 caracteres",
+    "password_max_length": "A senha não pode exceder 100 caracteres",
+    "invalid_credentials": "Usuário ou senha incorretos",
+    "invalid_request": "Dados de login inválidos",
+    "login_error": "Erro no login"
   },
   "errors": {
     "generic": "Ocorreu um erro inesperado",
     "network": "Erro de conexão",
     "unauthorized": "Acesso não autorizado",
+    "forbidden": "Acesso negado",
     "not_found": "Recurso não encontrado",
-    "server_error": "Erro interno do servidor"
+    "server_error": "Erro interno do servidor",
+    "operation_failed": "Operação falhou",
+    "product_create_failed": "Falha ao criar produto",
+    "product_update_failed": "Falha ao atualizar produto",
+    "product_delete_failed": "Falha ao excluir produto",
+    "product_fetch_failed": "Falha ao carregar produtos",
+    "transaction_create_failed": "Falha ao criar movimentação",
+    "transaction_update_failed": "Falha ao atualizar movimentação",
+    "transaction_delete_failed": "Falha ao excluir movimentação",
+    "transaction_fetch_failed": "Falha ao carregar movimentações"
   },
   "accessibility": {
     "skip_to_content": "Pular para o conteúdo principal",
